fixed: datepicker menu was too small when language = polish and month = december.

--- a/www/views/Extjs3/themes/Paper/src/_ext.scss
+++ b/www/views/Extjs3/themes/Paper/src/_ext.scss
@@ -1992,7 +1992,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 .x-date {
 	&-picker {
 		padding: 0 dp(8);
-		width: dp(256);
+		width: dp(304);
       border-color: transparent;
 		> table, table.x-date-inner {
 			width: 100%;
